package blinkstay.booking.entities;

public class Booking {

}
