package blinkstay.listing.enums;

public enum ListingCategory {
	BEACH, MOUNTAIN, CITY, COUNTRYSIDE, LUXURY, BUDGET, APARTMENT, VILLA, RESOURT, HOTEL, HOSTEL, OTHER
}
