package blinkstay.listing.enums;

public enum ListingStatus {
	DRAFT, PUBLISHED, SUSPENDED
}
