package blinkstay.review.entities;

public class Review {

}
