package blinkstay.room.enums;

public enum RoomCategory {
	SINGLE, DOUBLE, TWIN, DELUXE, SUITE, FAMILY, STUDIO
}
