@startuml SystemClassDiagram

class User {
    - id: UUID
    - username: String
    - email: String
    - password: String
    - role: UserRole
    - isActive: Boolean
    - profileImgUrl: String
    - imagePublicId: String
    - createdAt: LocalDateTime
    - updatedAt: LocalDateTime
}

enum UserRole {
    USER
    HOTEL_MANAGER
    ADMIN
}

User --> UserRole


' =========================
' LISTING MODULE
' =========================

class Listing {
    - id: UUID
    - title: String
    - location: String
    - description: String
    - country: String
    - amenities: List<String>
    - status: ListingStatus
    - category: ListingCategory
    - managerId: UUID
    - createdAt: LocalDateTime
    - updatedAt: LocalDateTime
    + createListing()
    + checkWhetherSameManager()
    + publishListing()
    + getListing()
    + updateListing()
}

enum ListingStatus {
    ACTIVE
    INACTIVE
    BLOCKED
}

enum ListingCategory {
    BEACH
    MOUNTAIN
    CITY
    COUNTRYSIDE
    LUXURY
    BUDGET
    APARTMENT
    VILLA
    RESORT
    HOTEL
    HOSTEL
    OTHER
}

Listing --> ListingStatus
Listing --> ListingCategory


class ListingImage {
    - id: UUID
    - listingId: UUID
    - imageUrl: String
    - publicId: String
    - displayOrder: Integer
}

class Geometry {
    - id: UUID
    - listingId: UUID
    - address: String
    - latitude: BigDecimal
    - longitude: BigDecimal
}

User "1" --> "*" Listing : manages >
Listing "1" --> "*" ListingImage : has >
Listing "1" --> "1" Geometry : located at >


' =========================
' ROOM MODULE
' =========================

class ListingRoom {
    - id: UUID
    - listingId: UUID
    - roomType: RoomCategory
    - price: BigDecimal
    - totalRooms: Integer
    - availableRooms: Integer
    + createRoom()
    + getRoomSummary()
    + updateRoom()
    + deleteRoom()
    + checkDoesListingHaveRooms()
}

enum RoomCategory {
    SINGLE
    DOUBLE
    TWIN
    DELUXE
    SUITE
    FAMILY
    STUDIO
}

Listing "1" --> "*" ListingRoom : contains >
ListingRoom --> RoomCategory


' =========================
' REVIEW MODULE
' =========================

class Review {
    - id: UUID
    - comment: String
    - rating: Integer
    - createdAt: LocalDateTime
    - userId: UUID
    - listingId: UUID
}

User "1" --> "*" Review : writes >
Listing "1" --> "*" Review : receives >


' =========================
' BOOKING MODULE
' =========================

class Booking {
    - id: UUID
    - checkIn: LocalDate
    - checkOut: LocalDate
    - guests: Integer
    - roomsBooked: Integer
    - bookingStatus: BookingStatus
    - createdAt: LocalDateTime
    - updatedAt: LocalDateTime
    - userId: UUID
    - listingId: UUID
    - roomId: UUID
    + totalAmount(): BigDecimal
}

enum BookingStatus {
    UPCOMING
    CHECKED_IN
    COMPLETED
    CANCELLED
}

Booking --> BookingStatus

User "1" --> "*" Booking : makes >
Listing "1" --> "*" Booking : booked for >
ListingRoom "1" --> "*" Booking : booked >


@enduml